added auth reducers
